aio.4: Link to aio_writev.2 and aio_readv.2
Also, add links to aio_error.2 and aio_return.2

--- a/lib/libc/sys/aio_return.2
+++ b/lib/libc/sys/aio_return.2
@@ -55,7 +55,9 @@ returns something other than
 If the asynchronous I/O request has completed, the status is returned
 as described in
 .Xr read 2 ,
+.Xr readv 2 ,
 .Xr write 2 ,
+.Xr writev 2 ,
 or
 .Xr fsync 2 .
 Otherwise,
